--- a/flutter_local_notifications/android/build.gradle
+++ b/flutter_local_notifications/android/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     implementation "androidx.media:media:1.1.0"
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "com.jakewharton.threetenabp:threetenabp:1.2.3"
+    //MoEngage
+    implementation("com.moengage:moe-android-sdk:10.5.00")
 }
